--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "autokad",
-    "version": "0.0.1-SNAPSHOT",
+    "version": "1.0.0",
     "description": "autokad frontend",
 
     "author": {
