--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "autokad",
-  "version": "0.0.1-SNAPSHOT",
+  "version": "1.0.0",
   "description": "autokad frontend",
   "main": "*",
   "ignore": [".*", "bin", "data", "test", "tmp", "Gruntfile.js", "package.json", "README.md"],
