--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "autokad",
-    "version": "1.0.0",
+    "version": "1.1.0-SNAPSHOT",
     "description": "autokad frontend",
 
     "author": {
