--- a/bower.json
+++ b/bower.json
@@ -14,12 +14,12 @@
     "angular": "1.3.0",
     "angular-i18n": "1.3.0",
     "ngInfiniteScroll": "1.2.*",
-    "underscore": "1.5.*",
+    "lodash-compat": "3.2.*",
     "underscore.string": "2.3.*",
     "purl": "2.3.*",
     "moment": "2.8.*",
-    "nullpointer-i18n": "git://github.com/newpointer/i18n-js.git",
-    "nullpointer-commons": "git://github.com/newpointer/commons-js.git",
+    "nullpointer-i18n": "git://github.com/newpointer/i18n-js.git#underscore_lodash",
+    "nullpointer-commons": "git://github.com/newpointer/commons-js.git#underscore_lodash",
     "bootstrap": "http://getbootstrap.com/2.3.2/assets/bootstrap.zip"
   },
   "devDependencies": {},
@@ -43,9 +43,6 @@
         "angular-locale_en.js"
       ]
     },
-    "underscore": {
-      "": "underscore.js"
-    },
     "underscore.string": {
       "": "lib/underscore.string.js"
     },
@@ -63,7 +60,6 @@
   },
   "private": true,
   "resolutions": {
-    "underscore": "1.5.*",
     "jquery": "2.1.*"
   }
 }
