--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "grunt-bower-task": "~0.4",
 
         "fs-extra": "0.8.x",
-        "underscore": "1.4.x",
+        "lodash": "3.*",
 
         "nullpointer-i18n-bin": "newpointer/i18n-bin.git",
         "nullpointer-web-bin": "newpointer/web-bin.git"
