--- a/bower.json
+++ b/bower.json
@@ -12,8 +12,8 @@
         "require-less": "0.1.2",
         "jquery": "2.1.*",
         "jquery.cookie": "1.4.1",
-        "angular": "1.3.0",
-        "angular-i18n": "1.3.0",
+        "angular": "1.3.*",
+        "angular-i18n": "1.3.*",
         "ngInfiniteScroll": "1.2.*",
         "purl": "2.3.*",
         "moment": "2.8.*",
