--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "autokad",
-    "version": "1.2.0",
+    "version": "1.3.0-SNAPSHOT",
     "description": "autokad frontend",
     "main": "*",
     "ignore": [
