--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,7 @@
         "jquery.cookie": "1.4.*",
         "angular": "1.3.*",
         "angular-i18n": "1.3.*",
-        "ngInfiniteScroll": "1.2.*",
+        "ngInfiniteScroll": "1.2.1",
         "purl": "2.3.*",
         "moment": "2.8.*",
         "nullpointer-i18n": "git://github.com/newpointer/i18n-js.git",
