--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "autokad",
-    "version": "1.4.0-SNAPSHOT",
+    "version": "1.4.0",
     "description": "autokad frontend",
 
     "author": {
